--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@mui/styles": "^5.5.3",
 		"@mui/x-date-pickers-pro": "^5.0.0-beta.0",
 		"@pmndrs/branding": "0.0.8",
+		"@react-three/drei": "^9.109.5",
+		"@react-three/fiber": "^8.17.5",
 		"@toast-ui/editor-plugin-color-syntax": "^3.0.3",
 		"@toast-ui/editor-plugin-table-merged-cell": "^3.0.2",
 		"@toast-ui/react-editor": "^3.1.7",
